test/sema/typeck/pattern/match-const-wrong-type.dora
const ZERO: Int64 = 0;

fn f(value: Int32): Int32 {
    match value {
        ZERO => 1i32,
        _ => 2i32
    }
}
